syntax = "proto3";

import "commons.proto";

option java_multiple_files = true;
option java_package = "br.edu.ufabc.mfmachado.chordzilla.proto";

service NotifyPredecessorNodeGone {
  rpc NodeGone (NotifyPredecessorNodeGoneRequest) returns (NotifyPredecessorNodeGoneResponse) {}
}

message NotifyPredecessorNodeGoneRequest {
  NodeInformation departingNode = 1;
}

message NotifyPredecessorNodeGoneResponse {}